# DIO_Projetos

./: README.md
AI_TaskAssistent/: README.md  agents.py  app.py  database.py  pyproject.toml
AnomaliasTransacoesPython/: README.md  anomalias.ipynb
AppFinancasPessoais/: README.md  pyproject.toml  requirements.txt
AppFinancasPessoais/src/: agent.py  app.py  database.py  (+1 more)
AssistenteIA/: README.md
AzureAI_Playground/: README.md
Azure_DB/: README.md
Azure_DataFactoryGit/: README.md
Azure_Databricks/: README.md  test_notebook.ipynb
Azure_OpenAI_API/: README.md  api_call_chat.py  api_call_text2image.py  semantic_kernel_api.py
Azure_Redundância_Arquivos/: README.md
Azure_Serviços/: README.md
Azure_VM/: README.md
Chatbot_RAG/: README.md  chat_rag.py
Chatbot_memoria/: README.md  chat_memory.py
CopilotoVendasIA/: README.md
Criando_Recursos/: README.md
CyberSecurity_BruteForceKali/: README.md
CyberSecurity_MalwarePython/: README.md
DadosRedesSociaisGrafos/: README.md
Farmaceutica_na_AWS/: README.md
FastAPIBanco/: Dockerfile  Dockerfile.frontend  README.md  container-compose.yaml  requirements.txt
GenAI_ETL_Python/: ETL.ipynb  README.md
IAMentorCarreira/: AGENT 1 - Entrevistador de Carreira em Tecnologia.md  AGENT 2 - Planejador de Carreiras.md  README.md
IA_AssistenteVendas/: README.md
ModelagemDadosGrafos/: README.md  streaming.cypher
NotebookLM/: README.md
RecomendacaoMusicaGrafos/: README.md  music.cypher
Speech2txtLLM/: README.md  speech_with_LLM.ipynb
VendaFYS/: README.md
ecotrip/: README.md  index.html
(+21 files in other folders)
