[project]
name = "ai-taskassistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.4.0",
    "langchain>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.2",
    "ollama>=0.6.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
